systemd (217-3) UNRELEASED; urgency=medium

  * systemd.bug-script: Really capture stderr of systemd-delta.
    (Closes: #771498)
  * boot-and-services autopkgtest: Give test apparmor job some time to
    actually finish.

 -- Martin Pitt <mpitt@debian.org>  Mon, 01 Dec 2014 17:01:29 +0100

systemd (217-2) experimental; urgency=medium

  * Re-enable journal forwarding to syslog, until Debian's sysloggers
    can/do all read from the journal directly.
  * Fix hostnamectl exit code on success.
  * Fix "diff failed with error code 1" spew with systemd-delta.
    (Closes: #771397)
  * Re-enable systemd-resolved. This wasn't meant to break the entire
    networkd, just disable the new NSS module. Remove that one manually
    instead. (Closes: #771423, LP: #1397361)
  * Import v217-stable patches (up to commit bfb4c47 from 2014-11-07).
  * Disable AppArmor again. This first requires moving libapparmor to /lib
    (see #771667). (Closes: #771652)
  * systemd.bug-script: Capture stderr of systemd-{delta,analyze}.
    (Closes: #771498)

 -- Martin Pitt <mpitt@debian.org>  Mon, 01 Dec 2014 15:09:09 +0100

systemd (217-1) experimental; urgency=medium

  [ Martin Pitt ]
  * New upstream release. Drop all cherry-picked patches and port the Debian
    specific ones.
  * Disable systemd-resolved for now. It still needs to mature, and
    integration into Debian should be discussed first.
  * Bump util-linux dependency to >= 2.25 as per NEWS.
  * Drop installation of 50-firmware.rules, not shipped upstream any more.
    Firmware loading is now exclusively done by the kernel.
  * Drop installation of readahead related services and code, readahead got
    dropped in this version.
  * Ship new networkctl CLI tool.
  * debian/libsystemd0.symbols: Add new symbols from this release.
  * debian/rules: Call dpkg-gensymbols with -c4 to immediately spot
    changed/missing symbols during build.
  * boot-and-services autopkgtest: Test AppArmor confined units (LP #1396270)